# poc_amqp

./: README.md  pyproject.toml
poc_amqp/: receive.py
tests/: test_poc_amqp.py
