[tool.poetry]
name = "poc_amqp"
version = "0.1.0"
description = ""
authors = ["Vincent Dagoury <vincent.dagoury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
amqp = "^5.0.5"
colorama = "^0.4.4"
loguru = "^0.5.3"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
